Fixes text wrapping for the image hint

--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ h2 {
     padding-bottom: 1%;
     padding-top: 1em;
     color: snow;
-    line-height: 0%;
+    line-height: 1.2em;
 }
 
 p.image-hint {
